--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 <div class='images'>
   <h1>Choose your device</h1><br>
   <span class='Navio'>
+    <a href='navio2/'><img src='img/Navio2WithPaspberryPi.png'>
+    <h3>Navio2</h3></a>
+  </span>
+  <span class='Navio_plus'>
     <a href='navio/'><img src='img/Navio_top copy.png'>
     <h3>Navio+</h3></a>
   </span>
