--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Emlid</title>
+  <title>Docs</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" id="themify-google-fonts-css" href="https://fonts.googleapis.com/css?family=Roboto+Condensed%3A300&amp;subset=latin&amp;ver=4.1.1" type="text/css" media="all">
   <link rel="stylesheet" href="css/theme.css" type="text/css" />
