Add link to Edge docs

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     <h3>Reach RTK</h3></a>
   </span>
 <br>
+  <span class='Edge'>
+    <a href='edge/'><img src='img/edge.png'>
+    <h3>Edge</h3></a>
+  </span>
   <span class='Navio'>
     <a href='navio2/'><img src='img/Navio2WithPaspberryPi.png'>
     <h3>Navio2</h3></a>
