--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <nav class="horizontal-menu-wrap">
       <ul id="horizontal-menu" class="horizontal-menu">
         <li><a href="https://emlid.com/edge">EDGE</a></li>
-        <li><a href="https://emlid.com/reachrs">REACH RS</a></li>
+        <li><a href="https://emlid.com/reachrs">REACH RS+</a></li>
         <li><a href="https://emlid.com/navio">NAVIO2</a></li>
-        <li><a href="https://emlid.com/reach">REACH</a></li>
-        <li><a href="https://emlid.com/shop">SHOP</a></li>
+        <li><a href="https://emlid.com/reach">REACH M+</a></li>
+        <li><a href="https://emlid.com/shop">STORE</a></li>
         <li><a href="https://emlid.com/blog/">BLOG</a></li>
         <li><a href="https://community.emlid.com/">FORUM</a></li>
         <li class="current-menu-item"><a href="https://docs.emlid.com">DOCS</a></li>
