--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href="https://emlid.com/reachrs">REACH RS+</a></li>
         <li><a href="https://emlid.com/navio">NAVIO2</a></li>
         <li><a href="https://emlid.com/reach">REACH M+</a></li>
-        <li><a href="https://emlid.com/shop">STORE</a></li>
+        <li><a href="https://store.emlid.com">STORE</a></li>
         <li><a href="https://emlid.com/blog/">BLOG</a></li>
         <li><a href="https://community.emlid.com/">FORUM</a></li>
         <li class="current-menu-item"><a href="https://docs.emlid.com">DOCS</a></li>
