RS+ support added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <span class='ReachRS'>
     <a href='reachrs/'><img src="img/ReachRS.png">
-    <h3>Reach RS</h3></a>
+    <h3>Reach RS/RS+</h3></a>
   </span>
   <span class='Reach'>
     <a href='reach/'><img src="img/Reach_top copy.png">
