--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
     <a href='reachrs/'><img src="img/ReachRS.png">
     <h3>Reach RS/RS+</h3></a>
   </span>
+ <span class='Reachm'>
+    <a href='reachm-plus/'><img src="img/Reachm-plus.png">
+    <h3>Reach M+</h3></a>
+  </span>
   <span class='Reach'>
     <a href='reach/'><img src="img/Reach_top copy.png">
     <h3>Reach RTK</h3></a>
