--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" id="themify-google-fonts-css" href="https://fonts.googleapis.com/css?family=Roboto+Condensed%3A300&amp;subset=latin&amp;ver=4.1.1" type="text/css" media="all">
   <link rel="stylesheet" href="css/theme.css" type="text/css" />
-  <link rel="stylesheet" href="css/theme_extra.css" type="text/css" />
+  <link rel="stylesheet" href="css/theme_extra.css?v=2" type="text/css" />
   <link rel="stylesheet" href="css/highlight.css">
   <link href="favicon.ico" rel="shortcut icon" />
   <style>
