index.html: GTM code fix

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 <head>
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TTFB5TG');</script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Docs</title>
@@ -16,15 +21,10 @@
     pre, code {font-size: 100%;}
     h3, h4, h5, h6 {color: black; font-weight: 300}
   </style>
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({‘gtm.start’:
-new Date().getTime(),event:‘gtm.js’});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!=‘dataLayer’?‘&l=‘+l:‘’;j.async=true;j.src=
-’https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,‘script’,‘dataLayer’,‘GTM-TTFB5TG’);</script>
 </head>
 <body>
-<noscript><iframe src=“https://www.googletagmanager.com/ns.html?id=GTM-TTFB5TG”
-height=“0" width=“0” style=“display:none;visibility:hidden”></iframe></noscript>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTFB5TG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="header_wrapper">
   <header>
     <hgroup>
